Fixed back to top button getting stuck
Now displays in the bottom right at all times

--- a/demo/css/index.css
+++ b/demo/css/index.css
@@ -2191,12 +2191,13 @@ h1 {
 
 /* Back to Top */
 .back-to-top-container {
-    position: absolute;
-    bottom: 0rem;
+    position: fixed;
+    bottom: 1.5rem;
     right: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 9999;
 }
 
 .back-to-top {
@@ -2213,7 +2214,6 @@ h1 {
     align-items: center;
     justify-content: center;
     font-family: 'Inter', sans-serif;
-    ;
     font-weight: 700;
 }
 
